--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="xyz.mustafaali.devtiles.MainActivity">
+        tools:context="xyz.mustafaali.devqstiles.MainActivity">
 
         <TextView
             android:layout_width="match_parent"
