--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <style name="AppTheme.Widget" />
+
+  <style name="AppTheme.Widget.RadioButton">
+    <item name="android:background">?android:selectableItemBackground</item>
+    <item name="android:drawableStart">?android:listChoiceIndicatorSingle</item>
+    <item name="android:textAppearance">?android:textAppearanceMedium</item>
+    <item name="android:textColor">?android:textColorPrimary</item>
+  </style>
+
 </resources>
