--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
     <item name="android:textColor">?android:textColorPrimary</item>
   </style>
 
+  <style name="AppTheme.Dialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <item name="android:windowNoTitle">true</item>
+    ...
+  </style>
+
 </resources>
