Updated Gradle and Kotlin deps, minor cleanup, made the commands text selectable to allow copy/paste

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:fontFamily="monospace"
             android:text="@string/permission_command"
+            android:textIsSelectable="true"
             android:textStyle="bold" />
 
         <Button
