--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,8 @@
         android:icon="@drawable/ic_share"
         android:title="@string/menu_share_app"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_oss_licenses"
+        android:title="@string/menu_licenses"
+        app:showAsAction="never" />
 </menu>
