--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,5 +52,10 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:textAppearance="@android:style/TextAppearance.Material.Body1" />
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/featuresRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 </ScrollView>
