--- a/app/src/main/res/layout/feature_item_layout.xml
+++ b/app/src/main/res/layout/feature_item_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -10,25 +10,30 @@
         android:id="@+id/featureImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:background="@android:color/background_dark"
+        android:padding="8dp"
+        android:layout_gravity="center"
+        tools:srcCompat="@drawable/ic_animator_duration" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/featureTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="TextView" />
+            android:textAppearance="@android:style/TextAppearance.Material.Body2"
+            tools:text="TextView" />
 
         <TextView
             android:id="@+id/featureDescription"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:maxLines="2"
-            android:text="TextView" />
+            android:textAppearance="@android:style/TextAppearance.Material.Body1"
+            tools:text="Description" />
     </LinearLayout>
 </LinearLayout>
