--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,12 +45,10 @@
             android:text="@string/features_title"
             android:textAppearance="@android:style/TextAppearance.Material.Large" />
 
-        <TextView
-            android:id="@+id/featuresDescriptionTextView"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/featuresRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:textAppearance="@android:style/TextAppearance.Material.Body1" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </ScrollView>
